changed logo format and reduced file size

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="body">
         <div class="logo">
-            <img class="brandLogo" src="logo.png" alt="brand logo">
+            <img class="brandLogo" src="logo.jpg" alt="brand logo">
         </div>
         <div class="link">
 
